[package]
name = "bheap-bench"
version = "0.1.0"
authors = ["Giacomo Stevanato <giaco.stevanato@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"
rand = "0.7"

[[bench]]
name = "build_heap"
harness = false

[[bench]]
name = "into_sorted_vec"
harness = false

[[bench]]
name = "pop"
harness = false